...
                modifier = Modifier.padding(top = 16.dp, bottom = 24.dp)
            ) {
                IconButton(onClick = onNavigateBack, modifier = Modifier.offset(x = (-12).dp)) {
                    Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Zurück")
                }
                Text(
                    text = "Modul wählen",
                    style = MaterialTheme.typography.headlineSmall,
                    fontWeight = FontWeight.Black
                )
            }

            // text field fuzzy query filter input
...
                value = searchQuery,
                onValueChange = {
                    searchQuery = it
                    viewModel.searchModules(it)
                },
                modifier = Modifier.fillMaxWidth(),
                placeholder = { Text("Name, Dozent, Raum...", modifier = Modifier.alpha(0.5f)) },
                leadingIcon = { Icon(Icons.Default.Search, contentDescription = null) },
                shape = RoundedCornerShape(24.dp),
                colors = TextFieldDefaults.colors(
                    unfocusedContainerColor = MaterialTheme.colorScheme.surface.copy(alpha = 0.4f),
                    focusedContainerColor = MaterialTheme.colorScheme.surface.copy(alpha = 0.6f),
                    unfocusedIndicatorColor = Color.White.copy(alpha = 0.1f),
...
